--- a/FINAL_OOP/FINAL_OOP.csproj
+++ b/FINAL_OOP/FINAL_OOP.csproj
@@ -47,13 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\..\..\Documents\Form1.cs">
-      <SubType>Form</SubType>
       <Link>Form1.cs</Link>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="..\..\..\..\Documents\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
       <Link>Form1.Designer.cs</Link>
     </Compile>
+    <Compile Include="Class2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="..\..\..\..\Documents\Form1.resx">
